--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -2171,7 +2171,7 @@ QPushButton:pressed{
 }</string>
             </property>
             <property name="text">
-             <string>÷</string>
+             <string>/</string>
             </property>
             <property name="shortcut">
              <string>/</string>
@@ -2179,7 +2179,7 @@ QPushButton:pressed{
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="multipleButton">
+           <widget class="QPushButton" name="multiplyButton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -2293,7 +2293,7 @@ QPushButton:pressed{
 }</string>
             </property>
             <property name="text">
-             <string>X</string>
+             <string>*</string>
             </property>
             <property name="shortcut">
              <string>*</string>
@@ -2697,12 +2697,12 @@ border 1px black;
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionClear">
    <property name="text">
-    <string>Clear</string>
+    <string>&amp;Clear</string>
    </property>
   </action>
   <action name="actionExit">
    <property name="text">
-    <string>Exit</string>
+    <string>&amp;Exit</string>
    </property>
    <property name="shortcut">
     <string>Esc</string>
